# PWHomeWork9base_by_BeautifulSoup

./: README.md  load_json.py  main.py  models.py  pyproject.toml
